[gd_scene load_steps=3 format=3 uid="uid://cpdbxncsmi801"]

[ext_resource type="Script" path="res://world.gd" id="1_agdg5"]
[ext_resource type="PackedScene" uid="uid://do5brjo00s4e5" path="res://Sceans/level_1.tscn" id="1_ob8wm"]

[node name="World" type="Node2D"]
script = ExtResource("1_agdg5")

[node name="level_1" parent="." instance=ExtResource("1_ob8wm")]
visible = false
position = Vector2(-692, -181)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Main_Menu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 387.0
offset_top = 181.0
offset_right = -387.0
offset_bottom = -181.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Main_Menu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main_Menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/Main_Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Host" type="Button" parent="CanvasLayer/Main_Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host
"

[node name="Join" type="Button" parent="CanvasLayer/Main_Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join
"

[node name="Address_Entry" type="LineEdit" parent="CanvasLayer/Main_Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Address Join Here"
alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Sceans/player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="CanvasLayer/Main_Menu/MarginContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/Main_Menu/MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
